--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 .cont{
-    border: 1px solid rgba(0, 238, 255, 0.6);
+    /* border: 1px solid rgba(0, 238, 255, 0.6); */
     display: inline-block;
-    background: rgba(0, 255, 213, 0.445);
-}
-body{
-    background: #000;
+    /* background: rgba(0, 255, 213, 0.445); */
 }
