--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,79 @@
-.cont{
-    /* border: 1px solid #00eeff99; */
-    display: inline-block;
-    /* width: 50%; */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-.stArea{
-    /* border: 1px solid #00eeff99; */
-    /* width: fit-content; */
+
+::selection {
+  color: #fff;
+  background: #664aff;
 }
-.work{
-    border: 3px solid #00eeff99 ;
-    border-radius: 5px;
-    padding: 5px 15px 5px 15px;
+.searchInput {
+  background: #fff;
+  border-radius: 5px;
+  position: relative;
+  /* box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12); */
+}
+
+.searchInput input {
+  /* height: 55px; */
+  width: 100%;
+  outline: none;
+  position: relative;
+  /* border: none; */
+  /* border-radius: 5px; */
+  font-size: 18px;
+  /* box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1); */
+}
+
+.searchInput.active input {
+  border-radius: 5px 5px 0 0;
+}
+
+.searchInput .resultBox {
+  padding: 0;
+  opacity: 0;
+  pointer-events: none;
+  max-height: 280px;
+  overflow-y: auto;
+}
+
+.searchInput.active .resultBox {
+  padding: 10px 8px;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.resultBox li {
+  list-style: none;
+  padding: 8px 12px;
+  display: none;
+  width: 100%;
+  cursor: default;
+  border-radius: 3px;
+}
+
+.searchInput.active .resultBox li {
+  display: block;
+}
+.resultBox li:hover {
+  background: #efefef;
+}
+
+.searchInput .icon {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  height: 55px;
+  width: 55px;
+  text-align: center;
+  line-height: 55px;
+  font-size: 20px;
+  color: #644bff;
+  cursor: pointer;
+}
+.work {
+  border: 3px solid #00eeff99;
+  border-radius: 5px;
+  padding: 5px 15px 5px 15px;
 }
