--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,25 @@
   color: #fff;
   background: #664aff;
 }
-
 .searchInput .resultBox {
-  padding: 0;
   opacity: 0;
+  padding: 0;
   pointer-events: none;
   position: absolute;
+  z-index: 999;
   max-height: 280px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+  border-color: aqua;
   overflow-y: auto;
 }
-.searchInput.act input {
-  border-end-start-radius: 0px;
+.searchInput input:focus {
+  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.1);
+}
+.searchInput input {
+  border-start-end-radius: 0px;
+  border-end-end-radius: 0px;
 }
 .searchInput.act .resultBox {
-  padding: 10px 8px;
   opacity: 1;
   pointer-events: auto;
 }
